--- a/src/tickets/templates/tickets/base.html
+++ b/src/tickets/templates/tickets/base.html
@@ -7,6 +7,13 @@
     </head>
     <body>
     <div class="container">
+        <center>
+            {% for error in errors %}
+                <div class="alert alert-error">
+                    {{ error }}
+                </div>
+            {% endfor %}
+        </center>
         {% block body %}{% endblock %}
     </div>
     </body>
