--- a/src/tickets/templates/tickets/incidents_list.html
+++ b/src/tickets/templates/tickets/incidents_list.html
@@ -15,17 +15,17 @@
                     {{ incident.pk }}
                 </td>
                 <td class="span1">
-                    <a href="/incident/history/{{ incident.id }}/">
-                    {{ incident.status }}
+                    <a href="{% url "incident-history-view" incident.pk %}">
+                    {{ incident.status.name }}
                 </td>
                 <td class="span2">
-                    {{ incident.area }}
+                    {{ incident.area.name }}
                 </td>
                 <td class="span2">
                     {{ incident.created_at|date:"d-m-Y G:i:s" }}
                 </td>
                 <td class="span6">
-                    <a href="/incident/{{ incident.id }}/">{{ incident.theme }}</a>
+                    <a href="{% url "incident-view" incident.pk %}">{{ incident.theme }}</a>
                 </td>
             </tr>
         {% endfor %}
