Change status of incident.

--- a/src/tickets/templates/tickets/incident.html
+++ b/src/tickets/templates/tickets/incident.html
@@ -1,5 +1,18 @@
 {% extends "tickets/base.html" %}
 
 {% block body %}
-    Здесь будет информация об инциденте.
+    <form action="." method="POST">{% csrf_token %}
+        <div class="control-group">
+            <table>
+                <tr>
+                    <td class="span6">
+                        {{ form.status.label_tag }} {{ form.status }}
+                    </td>
+                </tr>
+            </table>
+        </div>
+        <input type="submit" class="btn btn-primary span4" value="Изменить статус" name="change"/>
+    </form>
+
+    {{ incident.theme }}
 {% endblock %}
