--- a/src/tickets/templates/tickets/incident_add.html
+++ b/src/tickets/templates/tickets/incident_add.html
@@ -1,7 +1,7 @@
 {% extends "tickets/base.html" %}
 
 {% block body %}
-    <form action="." method="POST">{% csrf_token %}{% csrf_token %}
+    <form action="." method="POST">{% csrf_token %}
         <div class="control-group">
             <table>
                 <tr>
