Restyle filter page.

--- a/src/tickets/templates/tickets/incident_filter.html
+++ b/src/tickets/templates/tickets/incident_filter.html
@@ -2,28 +2,40 @@
 
 {% block body %}
     <form action="." method="POST">{% csrf_token %}
-        <table>
-            <tr>
-                <td class="span1">
-                    {{ form.area.label_tag }}
-                </td>
-                <td class="span3">
-                    {% for f in form.area %}
-                        {{ f }}
-                    {% endfor %}
-                </td>
-                <td class="span1">
-                    {{ form.status.label_tag }}
-                </td>
-                <td class="span3">
-                    {% for s in form.status %}
-                        {{ s }}
-                    {% endfor %}
-                </td>
-            </tr>
-        </table>
-        <br />
-        <center><input type="submit" class="btn btn-primary span4" value="Фильтровать" name="filter"/></center>
+        <div>
+            <table class="table">
+                <tr>
+                    <td>
+                        <span class="row-fluid">
+                            <span class="span1">
+                                {{ form.area.label }}
+                            </span>
+                            {% for f in form.area %}
+                                <span class="span2">{{ f }}</span>
+                            {% endfor %}
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <span class="row-fluid">
+                            <span class="span1">
+                                {{ form.status.label }}
+                            </span>
+                            {% for s in form.status %}
+                                <span class="span2">{{ s }}</span>
+                            {% endfor %}
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <center><input type="submit" class="btn btn-primary span4" value="Фильтровать" name="filter"/></center>
+                    </td>
+                </tr>
+            </table>
+        </div>
     </form>
+    <br />
     {% include "tickets/incidents_list.html" %}
 {% endblock %}
