--- a/src/tickets/templates/tickets/incidents_list.html
+++ b/src/tickets/templates/tickets/incidents_list.html
@@ -4,7 +4,7 @@
             <td>#</td>
             <td>Статус</td>
             <td>Тематика</td>
-            <td>Последнее изменение</td>
+            <td>Создан</td>
             <td>Тема</td>
         </tr>
     </thead>
