Titles for pages.

--- a/src/tickets/templates/tickets/base.html
+++ b/src/tickets/templates/tickets/base.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>{% block title %}Система тикетов{% endblock %}</title>
+        <title>{% block title %}Система отслеживания инцидентов{% endblock %}</title>
         <link rel="stylesheet" href="{% static 'css/bootstrap.css' %}"/>
     </head>
     <body>
