--- a/src/tickets/templates/tickets/incident_history.html
+++ b/src/tickets/templates/tickets/incident_history.html
@@ -1,5 +1,7 @@
 {% extends "tickets/base.html" %}
 
+{% block title %}{{ block.super }} - История статусов инцидента{% endblock %}
+
 {% block body %}
     <table class="table table-bordered table-hover">
         <thead>
