--- a/src/tickets/templates/tickets/main.html
+++ b/src/tickets/templates/tickets/main.html
@@ -1,5 +1,7 @@
 {% extends "tickets/base.html" %}
 
+{% block title %}{{ block.super }} - Главная страница{% endblock %}
+
 {% block body %}
 {% include "tickets/incidents_list.html" %}
 {% endblock %}
