--- a/src/tickets/templates/tickets/login.html
+++ b/src/tickets/templates/tickets/login.html
@@ -6,10 +6,8 @@
 <center>
 <form action="." method="POST">{% csrf_token %}
     <div>
-        <label for="username">Логин:</label>
-        <input type="text" name="username" value="" id="username">
-        <label for="password">Пароль:</label>
-        <input type="password" name="password" value="" id="password">                
+        {{ login_form.username.label_tag}} {{ login_form.username }}
+        {{ login_form.password.label_tag}} {{ login_form.password }}
     </div>
     <div>
         <input type="submit" class="span3 btn btn-primary" value="Вход"/>
