Added till_date to incident.
This field allows user to specify, when he wants his problem to be
solved.

--- a/src/tickets/templates/tickets/incident.html
+++ b/src/tickets/templates/tickets/incident.html
@@ -60,6 +60,10 @@
                 <td class="span1">Комната:</td>
                 <td>{{ incident.room }}</td>
             </tr>
+            <tr>
+                <td class="span1">Срок решения:</td>
+                <td>{{ incident.till_date }}</td>
+            </tr>
             {% if form_performers %}
                 <tr>
                     <td class="span1">Исполнители:</td>
