--- a/src/tickets/templates/tickets/incident_add.html
+++ b/src/tickets/templates/tickets/incident_add.html
@@ -9,6 +9,7 @@
                 <tr>
                     <td class="span6">
                         {{ form.area.label_tag }} {{ form.area }}
+                        {{ form.till_date.label_tag }} {{ form.till_date }}
                     </td>
                     <td class="span6">
                         {{ form.department.label_tag }} {{ form.department }}
