--- a/src/tickets/templates/tickets/incident_filter.html
+++ b/src/tickets/templates/tickets/incident_filter.html
@@ -32,6 +32,14 @@
                 </tr>
                 <tr>
                     <td>
+                        <span class="row-fluid">
+                            {{ form.till_date_start.label }} {{ form.till_date_start }}
+                            {{ form.till_date_end.label }} {{ form.till_date_end }}
+                        </span>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         <center><input type="submit" class="btn btn-primary span4" value="Фильтровать" name="filter"/></center>
                     </td>
                 </tr>
