--- a/src/tickets/templates/tickets/main.html
+++ b/src/tickets/templates/tickets/main.html
@@ -4,4 +4,5 @@
 
 {% block body %}
 {% include "tickets/incidents_list.html" %}
+{% include "tickets/incidents_pagination.html" with view_name="main-page-view" %}
 {% endblock %}
